<resources>
    <string name="app_name">DSH Tourism</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="registration_button">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
    <string name="registration_message">You are not registered yet. Use the registration button to complete your registration.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="search">Search&#8230;</string>
    <string name="Done_item">Done</string>
    <string name="no_offers_to_show">no offers to show</string>
    <string name="serverDown">Server down There is an Wrong, Please Try Again"</string>
    <string name="connectFailed">Connect Failed</string>
    <string name="noReservations">"You Have not any reservations!!"</string>
    <string name="Flight_Reservation_Canceled">Flight Reservation Canceled</string>
    <string name="BookConfirmed">Book Confirmed :)</string>
    <string name="selectFlightClass">Please select your flight reserve Class!!</string>
    <string name="youHaveLoggedIn">You Have login to do this reserve   </string>
    <string name="youHaveLoggedIn2">You Have login to do this rate   </string>
    <string name="cantReceivedConfirmation">ERROR: we can not receive the confirmation   </string>
    <string name="noResponse">"ERROR: no response!!"</string>
    <string name="noOfferSelected">No offer selected</string>
    <string name="errorCheckInAfterCheckOut">check-in can not be after check-out..</string>
    <string name="errorCheckInSameCheckOut">check-in and check-out can not be in the same day..</string>
    <string name="errorFillAllFields">Please fill in all fields..</string>
    <string name="PasswordChangedSuccessfully">Password changed successfully!!"</string>
    <string name="PasswordNotChange">Password not changed.. try again with true values</string>
    <string name="newPasswordNotMatch">New Password and Confirm Password not Matched !!</string>
    <string name="EnglishLanguage">English Language.</string>
    <string name="ArabicLanguage">Arabic Language.</string>
    <string name="success_charge">success charge</string>
    <string name="enterValue">Please Enter the value to charge..</string>
    <string name="noCity">No City To show..</string>
    <string name="noCountries">No Countries To show..</string>
    <string name="noFlight">No Flights To show..</string>
    <string name="checkYourEmail">Password Reset and send to your email, Please check Your email..</string>
    <string name="someInfoWrong">some information wrong!!</string>
    <string name="enterValidEmail">Please Enter Valid email!!</string>
    <string name="msgReco">Let me recommend you this WebSite for Travel and Tourism, </string>
    <string name="webSite">http://dshaya2.somee.com/</string>
    <string name="choose_one">choose one</string>
    <string name="noHotel">No Hotel To show..</string>
    <string name="ThanksForRating">Thank you for rating :)</string>
    <string name="cancel">Cancel</string>
    <string name="letsTravel">Lets Travel :D !!</string>
    <string name="passwordOrUsernameIsWrong">Password or Username is False!! try again..</string>
    <string name="hotel_reservation_canceled">Hotel Reservation Canceled</string>
    <string name="youHaveNotReservations">You Have not any Reservations!</string>
    <string name="noOffer">No Offer to show..</string>
    <string name="registrationDone">Registration Done!! Please Login to continue..</string>
    <string name="msg2">Try Again, User name must be only characters and number</string>
    <string name="msg3">Password and confirm password dose not match!!</string>
    <string name="msg4">No Flight Available in this Date, Please try another date..</string>
    <string name="msg5">No Offers Available from ot to this cities, Please try another options..</string>
    <string name="msgSent">Message Send Successfully .</string>
    <string name="msg6">User Info Updated successfully!!</string>
    <string name="hour">Hour: </string>
    <string name="rateValue">3.3</string>
    <string name="setFirstName">set First name</string>
    <string name="setLastName">set Last name</string>
    <string name="setGender">set Gender</string>
    <string name="setEmail">set e-mail</string>
    <string name="setPhone">set phone</string>
    <string name="setCountry">set country</string>
    <string name="setCity">set city</string>
    <string name="setUsername">set Username</string>
    <string name="setPassword">set Password</string>
    <string name="set_confirm_password">confirm password</string>
    <string name="setEmailSubject">set email subject</string>
    <string name="setMessage">set Message</string>
    <string name="DateFormat">MM/DD/YYYY</string>
    <string name="rooms">Rooms</string>
    <string-array name="array_adult">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
    <string name="title_activity_maps">Map</string>
    <string-array name="array_Card">
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discover Network</item>
    </string-array>
    <string-array name="array_Month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="array_Year">
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
    </string-array>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_AboutUs">AboutUs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="pref_lang_label">Select Lang</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_lang_true">English Language</string>
    <string name="pref_lang_false">Arabic Language</string>
    <string name="from_city">From City:</string>
    <string name="from_hour">from Hour</string>
    <string name="Economy">Economy</string>
    <string name="EconomyPrice">Economy Price</string>
    <string name="Economy_seat">Economy Seat</string>
    <string name="to_city">To City:</string>
    <string name="flight_duration">Flight Duration</string>
    <string name="business">Business</string>
    <string name="BusinessPrice">Business Price</string>
    <string name="Adult">Adult: </string>
    <string name="AirLine_name">AirLine Name: </string>
    <string name="Totalcost">Total Cost</string>
    <string name="submitt_booking">Submit your Booking</string>
    <string name="choose_duration">Choose Duration: </string>
    <string name="check_in">Check-In Date: </string>
    <string name="check_out">Check-Out Date: </string>
    <string name="Continue">Continue</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="change_password">Change Password</string>
    <string name="card_type">Credit card type: </string>
    <string name="name_on_Card">Card Holder Name: </string>
    <string name="card_number">Card Number: </string>
    <string name="cvc">(CVC): </string>
    <string name="expierd_date">Card expiration date: </string>
    <string name="new_credit">New Credit: </string>
    <string name="submit_charge">Submit Charge: </string>
    <string name="EngName">City Name in English:</string>
    <string name="ViewHotels">View Hotels: </string>
    <string name="choose_your_destination">Choose Your Destination:</string>
    <string name="search_for_flight">Search for Flight: </string>
    <string name="get_flight_schedule">Get Flights Schedule: </string>
    <string name="from">From: </string>
    <string name="select_from_city">Select from city</string>
    <string name="to">To: </string>
    <string name="select_to_city">Select to city</string>
    <string name="get_Schedule">Get The Schedule</string>
    <string name="msg1">Enter Your Email to send new password:</string>
    <string name="reset_password">Reset Password</string>
    <string name="flights">Flights</string>
    <string name="Hotels">Hotels</string>
    <string name="Tourism_Offers">Tourism Offers</string>
    <string name="my_reservations">My Reservations</string>
    <string name="my_account">My Account</string>
    <string name="search_for_hotel">Search for Hotel</string>
    <string name="my_hotel_reservations">My Hotel Reservations</string>
    <string name="engName">English Name</string>
    <string name="hotelStars">Hotel Stars: </string>
    <string name="hotel_rating">Hotel Rating: </string>
    <string name="add_rate">Add Rate</string>
    <string name="city_name">City Name: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="website">Website: </string>
    <string name="email">Email: </string>
    <string name="check_for_hotel_room">Check for Hotel Room</string>
    <string name="hotel_location">Hotel Location</string>
    <string name="call_hotel">Call Hotel</string>
    <string name="HotelName">Hotel Name</string>
    <string name="country">Country: </string>
    <string name="city">City: </string>
    <string name="date">Date</string>
    <string name="update_your_info">Update your Info</string>
    <string name="flight_reservation">Flight RESERVATION</string>
    <string name="flight_to">Flight to:</string>
    <string name="reservation_number">Reference Number:</string>
    <string name="time">Time</string>
    <string name="flight_class">Flight Class: </string>
    <string name="flight_number">Flight number: </string>
    <string name="passenger_name">Passenger Name: </string>
    <string name="passengers_counts">Passengers Counts: </string>
    <string name="reservation_cost">Reservation cost </string>
    <string name="reservation_date_and_time">Reservation Date and Time: </string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="hotel_reservation">HOTEL RESERVATION</string>
    <string name="reference_number">Reference Number: </string>
    <string name="type">Type: </string>
    <string name="Guests_count">Guests count: </string>
    <string name="Guest">Guest: </string>
    <string name="hotel">Hotel:</string>
    <string name="BusinessSeat">Business Seat</string>
    <string name="chargeNewCredit">Charge new Credit</string>
    <string name="ContactUs">Contact Us</string>
    <string name="change_app_language">Change App Language</string>
    <string name="LogOut">LogOut</string>
    <string name="Share">Share</string>
</resources>