<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/flightpic2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/flight_reservation"
            android:textColor="#fff"
            android:background="#7000"
            android:gravity="center"
            android:padding="10dp"
            android:id="@+id/tvTitle1"
            />
            </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_FlightTo"
            android:text="@string/flight_to"
            android:textColor="#1431a4"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_ReferenceNumber"
            android:text="@string/reservation_number"
            android:textColor="#000000"
            android:padding="2dp"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_fromCity"
            android:text="@string/from"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Date"
            android:text="@string/date"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Time"
            android:text="@string/time"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Duration"
            android:text="@string/flight_duration"
            android:textColor="#000000"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Class"
            android:text="@string/flight_class"
            android:textColor="#000000"
            android:padding="10dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Airline"
            android:text="@string/AirLine_name"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_FlightNumber"
            android:text="@string/flight_number"
            android:textColor="#000000"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_PassengerName"
            android:text="@string/passenger_name"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_passengersCount"
            android:text="@string/passengers_counts"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_Reservation_cost"
            android:text="@string/reservation_cost"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRFC_resDate"
            android:text="@string/reservation_date_and_time"
            android:textColor="#000000"
            android:padding="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancelFlight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="#01579B"
        android:text="@string/cancel_reservation"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:onClick="btnCancelFlight"/>

</LinearLayout>