<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/hotel_pic1"
                android:contentDescription="@string/hotel"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/hotel_reservation"
        android:textColor="#fff"
        android:background="#7000"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/tvTitle8"
        />
    </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_HotelName"
            android:text="@string/HotelName"
            android:textColor="#1431a4"
            android:textStyle="bold"
            android:padding="10dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_ReferenceNumber"
            android:text="@string/reference_number"
            android:textColor="#000000"
            android:padding="2dp"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#f1f1f2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_Type"
            android:text="@string/type"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_GuestsCount"
            android:text="@string/Guests_count"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="#f1f1f2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_checkIn"
            android:text="@string/check_in"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_checkOut"
            android:text="@string/check_out"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="#f1f1f2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_GuestName"
            android:text="@string/Guest"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_ReservationCost"
            android:text="@string/reservation_cost"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="#f1f1f2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_Country"
            android:text="@string/country"
            android:textColor="#000000"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRHC_City"
            android:text="@string/city"
            android:textColor="#000000"
            android:padding="10dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnMap"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="8dp"
            android:background="@drawable/circle_btn"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:text="@string/hotel_location"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textSize="11sp"/>

        <Button
            android:id="@+id/Call_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_btn"
            android:drawableTop="@android:drawable/sym_call_incoming"
            android:padding="8dp"
            android:textAllCaps="false"
            android:text="@string/call_hotel"
            android:layout_toEndOf="@+id/btnMap"
            android:textColor="#fff"
            android:textSize="11sp"/>



        <Button
            android:id="@+id/btnCancelHotel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_btn"
            android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
            android:padding="8dp"
            android:textAllCaps="false"
            android:text="@string/cancel_reservation"
            android:layout_toEndOf="@+id/Call_btn"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </RelativeLayout>
  <!-- <Button
        android:id="@+id/btnCancelHotel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:background="#d67601"
        android:text="Cancel Reservation"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:onClick="btnCancelHotel"/> -->
</LinearLayout>
